# vista

./: .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
brain/: llm_client.py  memory.py  prompts.py
core/: config.py  event_bus.py  listener.py  orchestrator.py
perception/: screenshot.py
scripts/: test_voice.py
skills/: base.py  registry.py
skills/dev/: git.py
skills/productivity/: calendar.py
skills/system/: apps.py
voice/: stt.py  tts.py  wake_word.py
